# tapis_clone

./: .clang-tidy  .gitattributes  CMakeLists.txt  README.md
benchmarking/: benchmark.py  info.py  options.py
benchmarking/helpers/: rapid.py
benchmarking/results/diffy/: array-argmax-fwd.c.json  array-argmin-fwd.c.json  array-compare-fwd.c.json  array-copy-fwd.c.json  array-find-fwd.c.json  array-find-strong-spec-fwd.c.json  array-init-0-fwd.c.json  array-init-i-fwd.c.json  array-max-fwd.c.json  array-min-fwd.c.json  array-reverse-fwd.c.json  array_assert_loop_dep.c.json  array_doub_access_init_const.c.json  array_init_nondet_vars.c.json  array_init_pair_sum_const.c.json  array_init_pair_symmetr.c.json  array_init_pair_symmetr2.c.json  array_init_var_plus_ind.c.json  array_init_var_plus_ind2.c.json  array_init_var_plus_ind3.c.json  array_min_and_copy_shift_sum_add.c.json  array_monotonic.c.json  array_range_init.c.json  array_tiling_poly6.c.json  array_tiling_tcpy.c.json  array_tripl_access_init_const.c.json  copysome1-1.c.json  copysome1-2.c.json  copysome2-1.c.json  copysome2-2.c.json  partial_lesser_bound-1.c.json  sanfoundry_02_ground.c.json  sanfoundry_27_ground.c.json  standard_compareModified_ground.c.json  standard_compare_ground.c.json  standard_copy1_ground-1.c.json  standard_copy1_ground-2.c.json  standard_copy2_ground-1.c.json  standard_copy2_ground-2.c.json  standard_copy3_ground-1.c.json  (+43 more)
benchmarking/results/freqhorn/: array-argmax-both-mutual-rec.c.json  array-argmax-both-rec.c.json  array-argmax-both.c.json  array-argmax-bwd-rec.c.json  array-argmax-bwd.c.json  array-argmax-fwd-rec.c.json  array-argmax-fwd.c.json  array-argmin-both-mutual-rec.c.json  array-argmin-both-rec.c.json  array-argmin-both.c.json  array-argmin-bwd-rec.c.json  array-argmin-bwd.c.json  array-argmin-fwd-rec.c.json  array-argmin-fwd.c.json  array-bubble-sort-bwd-rec.c.json  array-bubble-sort-bwd.c.json  array-bubble-sort-fwd-rec.c.json  array-bubble-sort-fwd.c.json  array-compare-both-mutual-rec.c.json  array-compare-both-rec.c.json  array-compare-both.c.json  array-compare-bwd-rec.c.json  array-compare-bwd.c.json  array-compare-fwd-rec.c.json  array-compare-fwd.c.json  array-copy-both-rec.c.json  array-copy-both.c.json  array-copy-bwd-rec.c.json  array-copy-bwd.c.json  array-copy-fwd-rec.c.json  array-copy-fwd.c.json  array-find-both-mutual-rec.c.json  array-find-both.c.json  (+185 more)
include/hcvc/: context.hh  module.hh  verifier.hh
src/: CMakeLists.txt
src/hcvc/: context.cc  module.cc  verifier.cc
src/hcvc/clause/: clause.cc  hypergraph.cc  predicate.cc  set.cc
src/hcvc/fe/: frontend.cc
src/hcvc/fe/c/: cfrontend.cc  compiler.cc  spec_parser.cc
src/hcvc/logic/: evaluator.cc  not_eliminator.cc  operator.cc  printer.cc  smtface.cc  substituter.cc  term.cc
src/hcvc/program/: function.cc  state.cc  type.cc  variable.cc
src/hcvc/utils/: source.cc  to_smtlib.cc
src/tapis/engines/: bounds.cc  engine.cc  horn_ice_qdt.cc  options.cc  outputs.cc  statistics.cc
src/tapis/engines/ai/: ai.cc
src/tapis/engines/attributes/: attribute.cc  enumerator.cc  new_attr_synthesizer.cc
src/tapis/engines/hornice/: hornice.cc  learner.cc  teacher.cc
src/tapis/engines/hornice/qdt/: aggregation.cc  classifier.cc  diagram.cc  learner.cc  quantifier.cc
src/tapis/engines/hornice/qdt/general_qdt/: classifier.cc
(+2100 files in other folders)
